to Subversion revision numbers (rXXXXX).

WinMerge 2.8.2
  Release Notes update (#1933950)
  Make 'Yes' the default button in copy confirmation dialog (#1943647)
  Allow drag & drop of paths to Open dialog (#1945254)
  Enlarge 'Discard All' button in Save confirmation dialog (#1947216)
  Tab icons at Filter dialog (#1926531)
  BugFix: Shortcuts given in command line were not expanded (#1942217)
  BugFix: Version Control filter did not match all VSS files (#1881186)
  New translation: Romanian (#1939729)
  Translation updates:
  - Bulgarian (#1957434)
  - Croatian (#1958283)
  - German (#1949068)
  - Italian (#1939235)
  - Polish (#1934655)
  - Swedish (#1950188)

WinMerge 2.8.0 - 2008-04-03 (r5254)
  Installer: Use correct way to create start menu web link (#1913919)
  Installer: Updated the side art of the installer application (#1915012)
  Update URLs and switch to 2.8 manual (#1919965)
  New splash screen (#1914869)
  Create separate document for compiling WinMerge (#1927502)
  Update InnoSetup translations (#1931492)
  Manual and documentation updates
  BugFix: Installer could create a registry access error (#1909967)
  BugFix: The filter text box in Open-dialog sometimes displayed some garbage
    data (#1915424)
  BugFix: Print area was not clipped correctly. (#1915536)
  BugFix: Undo after pane swapping (#1915536, #1923625)
  BugFix: Quick compare for same folder didn't show differences (#1918599)
  BugFix: Installer didn't have ChangeLog.txt included (r5256)
  Translation updates:
  - Brazilian (#1913723)
  - Chinese Traditional (#1927605)
  - French (#1920380)
  - German (#1918139)
  - Japanese (r5153)
  - Russian (#1914466)
  - Spanish (#1907152, r5252)
  - Swedish (#1908289)

WinMerge 2.8 RC - 2008-03-04 (r5125)
  Update developers list in splash screen (#1891548)
  Better error handling for Excel plugin (#1510293)
  Add macros, bookmarks and document properties to Word plugin (#1510298)
  Add *.dot (document template) extension to Word plugin (r5120)